# ChangeLog for sys-block/ms-sys
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/ms-sys/ChangeLog,v 1.13 2012/08/10 14:16:42 johu Exp $

  10 Aug 2012; Johannes Huber <johu@gentoo.org> ms-sys-2.3.0.ebuild:
  Stable for x86, wrt bug #429210

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> ms-sys-2.3.0.ebuild:
  Stable for amd64, wrt bug #429210

  31 Jul 2012; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add upstream metadata.

*ms-sys-2.3.0 (27 May 2012)

  27 May 2012; Michael Palimaka <kensington@gentoo.org> +ms-sys-2.3.0.ebuild,
  -ms-sys-2.1.3.ebuild, -ms-sys-2.1.4.ebuild:
  Version bump. Remove old.

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> ms-sys-2.2.1.ebuild:
  x86 stable wrt bug #397219

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org> ms-sys-2.2.1.ebuild:
  Stable for amd64, wrt bug #397219

*ms-sys-2.2.1 (10 May 2011)

  10 May 2011; Michael Weber <xmw@gentoo.org> +ms-sys-2.2.1.ebuild:
  Version bump (thanks to Ross Smith, bug 347063)

*ms-sys-2.1.4 (17 Jan 2010)

  17 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> +ms-sys-2.1.4.ebuild:
  Version bump wrt #300850, thanks to Tobias Muser for reporting.

  24 Nov 2008; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  Rename my old e-mail drac at gentoo.org to ssuominen at gentoo.org.

  17 Aug 2008; Markus Meier <maekke@gentoo.org> ms-sys-2.1.3.ebuild:
  x86 stable, bug #232515

  30 Jul 2008; Samuli Suominen <drac@gentoo.org> ms-sys-2.1.3.ebuild:
  amd64 stable wrt #232515 and use PREFIX also in src_compile for emake,
  since it's required to define -DLOCALEDIR at build time.

  19 May 2008; Dawid Węgliński <cla@gentoo.org> ms-sys-2.1.3.ebuild:
  Add ~x86 keyword

*ms-sys-2.1.3 (18 May 2008)

  18 May 2008; Samuli Suominen <drac@gentoo.org> +ms-sys-2.1.3.ebuild:
  Initial commit for bug 69028, thanks to Christian Gmeiner, Adrian
  Frühwirth and Mike Gualtieri.