@@ -1,6 +1,9 @@
 # ChangeLog for sys-block/ms-sys
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-block/ms-sys/ChangeLog,v 1.13 2012/08/10 14:16:42 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-block/ms-sys/ChangeLog,v 1.14 2012/08/10 14:21:33 kensington Exp $
+
+  10 Aug 2012; Michael Palimaka <kensington@gentoo.org> -ms-sys-2.2.1.ebuild:
+  Remove old.
 
   10 Aug 2012; Johannes Huber <johu@gentoo.org> ms-sys-2.3.0.ebuild:
   Stable for x86, wrt bug #429210
